# SiWECAL-Sim

./: .gitignore  README.md
generation/: README.md
generation/geometry/: ECAL_CONF0.xml  ECAL_CONF2.xml  ECAL_CONF3.xml  ECAL_commondefs.xml  ECAL_commondisp.xml  README.md
generation/geometry_TB2021/: ECAL_CONF1.xml  ECAL_commondefs.xml  confs.py  write_geom_desc.py  write_geom_desc_py3.py
generation/geometry_TB2021/oldConfs/: ECAL_CONF0.xml  ECAL_CONF1.xml  OLD_ECAL_CONF1.xml
generation/plots/: ControlGeneration.ipynb  layer_plots.py  lcio2pandas_v01.py
generation/plots/results/v01/: ECAL_QGSP_BERT_conf0_e-_3GeV_0.pickle  ECAL_QGSP_BERT_conf1_e-_3GeV_0.pickle
generation/plotting/: layer_plots.py  lcio2pandas.py  utils.py
generation/plotting/old/: README.md  makeplots.py
generation/run_scripts/TB2021/: README.md  example_runddsim_QGSP_BERT_conf0_e-_3GeV_0.py  generic_condor.sh  grid58_e3GeV.mac  grid_-40-40_e-3GeV.mac  send_grid58.sh  send_grid_-40-40.sh
generation/run_scripts/TB2021/examples/: example_runddsim_QGSP_BERT_conf0_e-_3GeV_0.py  grid_-40-40_e-3GeV.mac
generation/run_scripts/TB2021/log/: runddsim_QGSP_BERT_conf1_e-_1.4GeV_0.sh.e1140817  runddsim_QGSP_BERT_conf1_e-_1.4GeV_0.sh.o1140817  runddsim_QGSP_BERT_conf1_e-_1.8GeV_0.sh.e1140818  runddsim_QGSP_BERT_conf1_e-_1.8GeV_0.sh.o1140818  runddsim_QGSP_BERT_conf1_e-_1GeV_0.sh.e1140804  runddsim_QGSP_BERT_conf1_e-_1GeV_0.sh.e1140805  runddsim_QGSP_BERT_conf1_e-_1GeV_0.sh.e1140811  runddsim_QGSP_BERT_conf1_e-_1GeV_0.sh.e1140816  runddsim_QGSP_BERT_conf1_e-_1GeV_0.sh.o1140804  runddsim_QGSP_BERT_conf1_e-_1GeV_0.sh.o1140805  runddsim_QGSP_BERT_conf1_e-_1GeV_0.sh.o1140811  runddsim_QGSP_BERT_conf1_e-_1GeV_0.sh.o1140816  runddsim_QGSP_BERT_conf1_e-_2.2GeV_0.sh.e1140819  runddsim_QGSP_BERT_conf1_e-_2.2GeV_0.sh.o1140819  runddsim_QGSP_BERT_conf1_e-_2.6GeV_0.sh.e1140820  runddsim_QGSP_BERT_conf1_e-_2.6GeV_0.sh.o1140820  runddsim_QGSP_BERT_conf1_e-_3.0GeV_0.sh.e1140821  runddsim_QGSP_BERT_conf1_e-_3.0GeV_0.sh.o1140821  runddsim_QGSP_BERT_conf1_e-_3.4GeV_0.sh.e1140822  runddsim_QGSP_BERT_conf1_e-_3.4GeV_0.sh.o1140822  runddsim_QGSP_BERT_conf1_e-_3.8GeV_0.sh.e1140823  runddsim_QGSP_BERT_conf1_e-_3.8GeV_0.sh.o1140823  runddsim_QGSP_BERT_conf1_e-_4.2GeV_0.sh.e1140824  runddsim_QGSP_BERT_conf1_e-_4.2GeV_0.sh.o1140824  runddsim_QGSP_BERT_conf1_e-_4.6GeV_0.sh.e1140825  runddsim_QGSP_BERT_conf1_e-_4.6GeV_0.sh.o1140825  runddsim_QGSP_BERT_conf1_e-_5.2GeV_0.sh.e1140826  runddsim_QGSP_BERT_conf1_e-_5.2GeV_0.sh.o1140826  runddsim_QGSP_BERT_conf1_e-_5.6GeV_0.sh.e1140827  runddsim_QGSP_BERT_conf1_e-_5.6GeV_0.sh.o1140827  runddsim_QGSP_BERT_conf1_e-_6GeV_0.sh.e1140828  runddsim_QGSP_BERT_conf1_e-_6GeV_0.sh.o1140828
generation/run_scripts/TB2021/macros/: grid_-40-40_e-_1.4GeV.mac  grid_-40-40_e-_1.8GeV.mac  grid_-40-40_e-_1GeV.mac  grid_-40-40_e-_2.2GeV.mac  grid_-40-40_e-_2.6GeV.mac  grid_-40-40_e-_3.0GeV.mac  grid_-40-40_e-_3.4GeV.mac  grid_-40-40_e-_3.8GeV.mac  grid_-40-40_e-_4.2GeV.mac  grid_-40-40_e-_4.6GeV.mac  grid_-40-40_e-_5.2GeV.mac  grid_-40-40_e-_5.6GeV.mac  grid_-40-40_e-_6GeV.mac
generation/run_scripts/TB2021/old_macros/: grid58_e3GeV.mac  grid58_mu04GeV.mac  grid58_mu400GeV.mac  grid58_mu40GeV.mac  grid58_mu4GeV.mac  grid58_p3GeV.mac
generation/run_scripts/TB2021/steer/: move_logs.sh  runddsim_QGSP_BERT_conf1_e-_1.4GeV_0.py  runddsim_QGSP_BERT_conf1_e-_1.4GeV_0.sh  runddsim_QGSP_BERT_conf1_e-_1.8GeV_0.py  runddsim_QGSP_BERT_conf1_e-_1.8GeV_0.sh  runddsim_QGSP_BERT_conf1_e-_1GeV_0.py  runddsim_QGSP_BERT_conf1_e-_1GeV_0.sh  runddsim_QGSP_BERT_conf1_e-_1GeV_0.sub  runddsim_QGSP_BERT_conf1_e-_2.2GeV_0.py  runddsim_QGSP_BERT_conf1_e-_2.2GeV_0.sh  runddsim_QGSP_BERT_conf1_e-_2.6GeV_0.py  runddsim_QGSP_BERT_conf1_e-_2.6GeV_0.sh  runddsim_QGSP_BERT_conf1_e-_3.0GeV_0.py  runddsim_QGSP_BERT_conf1_e-_3.0GeV_0.sh  runddsim_QGSP_BERT_conf1_e-_3.4GeV_0.py  runddsim_QGSP_BERT_conf1_e-_3.4GeV_0.sh  runddsim_QGSP_BERT_conf1_e-_3.8GeV_0.py  runddsim_QGSP_BERT_conf1_e-_3.8GeV_0.sh  runddsim_QGSP_BERT_conf1_e-_4.2GeV_0.py  runddsim_QGSP_BERT_conf1_e-_4.2GeV_0.sh  runddsim_QGSP_BERT_conf1_e-_4.6GeV_0.py  runddsim_QGSP_BERT_conf1_e-_4.6GeV_0.sh  runddsim_QGSP_BERT_conf1_e-_5.2GeV_0.py  runddsim_QGSP_BERT_conf1_e-_5.2GeV_0.sh  runddsim_QGSP_BERT_conf1_e-_5.6GeV_0.py  runddsim_QGSP_BERT_conf1_e-_5.6GeV_0.sh  runddsim_QGSP_BERT_conf1_e-_6GeV_0.py  runddsim_QGSP_BERT_conf1_e-_6GeV_0.sh
generation/run_scripts/gunparticles/: .#runmany_showers_electrons_condor.sh  README.md  example_runddsim_QGSP_BERT_conf1_e+_1GeV_0.py  generic_condor.sh  sendjobs.sh
generation/run_scripts/realisticbeam/: example_runddsim_QGSP_BERT_conf0_e+_3GeV_0.py  example_runddsim_QGSP_BERT_conf1_e+_3GeV_0.py  generic_condor.sh  grid58_e3GeV.mac  test_grid58_e3GeV.mac
processors/: CMakeLists.txt  README
processors/ConversionSiWECAL/: fitexample.C
processors/ConversionSiWECAL/include/: ConversionProcessor.hh
processors/ConversionSiWECAL/src/: ConversionProcessor.cc
processors/ShapedConversionSiWECAL/include/: ShapedConversionProcessor.hh
processors/ShapedConversionSiWECAL/src/: ShapedConversionProcessor.cc
processors/ShapingSiWECAL/include/: ShapingProcessor.hh
processors/ShapingSiWECAL/src/: ShapingProcessor.cc
